--- a/index.html
+++ b/index.html
@@ -867,13 +867,13 @@
     <script>
         // --- FIREBASE CONFIG ---
         const firebaseConfig = {
-            apiKey: "AIzaSyDP7-fXdhMaAUSxQaa-VZWQUKsLQcpvTvE",
-            authDomain: "command-center-cdb69.firebaseapp.com",
-            projectId: "command-center-cdb69",
-            storageBucket: "command-center-cdb69.firebasestorage.app",
-            messagingSenderId: "186919663224",
-            appId: "1:186919663224:web:042b5493ae487c2b5bdf8d",
-            measurementId: "G-SGNYVWP14S"
+            apiKey: "AIzaSyBP_YNtKfNcauq7vvmozqUNwPPeXfz8j7s",
+            authDomain: "pengajuan-pembiayaan.firebaseapp.com",
+            projectId: "pengajuan-pembiayaan",
+            storageBucket: "pengajuan-pembiayaan.firebasestorage.app",
+            messagingSenderId: "356845449948",
+            appId: "1:356845449948:web:16cecc83c9ef277f93fa19",
+            measurementId: "G-8S532S7PSV"
         };
 
         // Initialize Firebase
