--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label class="form-label">CIF Nasabah</label>
-                            <input type="number" id="inputCIF" class="form-input" placeholder="Nomor CIF" required>
+                            <input type="text" id="inputCIF" class="form-input" placeholder="Nomor CIF" required>
                         </div>
                         <div class="form-group">
                             <label class="form-label">Nama Nasabah</label>
@@ -1366,3 +1366,4 @@
     </script>
 </body>
 </html>
+
